--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="info.androidhive.navigationdrawer.fragment.HomeFragment">
+    tools:context="com.c2c.learnopedia.fragment.HomeFragment">
 
     <GridView
         android:id="@+id/subject_gridView"
