--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="info.androidhive.navigationdrawer.fragment.SettingsFragment">
+    tools:context="com.c2c.learnopedia.fragment.SettingsFragment">
 
     <ImageView
         android:layout_width="100dp"
