--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,6 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f0f0f0">
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:orientation="horizontal"
@@ -12,11 +13,11 @@
         >
         <Button
             android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            style="?android:textAppearanceSmall"
             android:text="Entroll"
-            android:background="@drawable/button_shape"
+            android:background="@color/login_btn_color"
             android:textColor="@color/white"
-            android:singleLine="true"
-            android:layout_height="wrap_content"
             android:id="@+id/entroll"
             />
         <TextView
